Fix player name overlapping with everything in the table when logged out
This would only happen on tiny screens when logged out but holy moly did
it look like crap

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -609,7 +609,6 @@ h6
     flex: 2 0 auto
     display: none
     white-space: pre-wrap
-
     &:not(:empty)
       border-bottom: 1px solid
 
@@ -745,6 +744,7 @@ body:has(dialog[open])
         text-align: center
 
       .player-name
+        grid-column: -2/2
         width: 100%
         text-align: center
 
